// Copyright 2018 the orbs-network-typescript authors
// This file is part of the orbs-network-typescript library in the Orbs project.
//
// This source code is licensed under the MIT license found in the LICENSE file in the root directory of this source tree.
// The above notice should be included in all copies or substantial portions of the software.

syntax = "proto3";

import "transactions.proto";

message BlockHeader {
  uint32 version = 1;
  bytes prevBlockHash = 2;
  uint32 height = 3;
}

message BlockSignatureData {
  bytes signature = 1;
  string signatory = 2;
}

message BlockBody {
  repeated Transaction transactions = 1;
  repeated TransactionReceipt transactionReceipts = 2;
  repeated ModifiedStateKey stateDiff = 3;
}

message ModifiedStateKey {
  bytes contractAddress = 1;
  string key = 2;
  string value = 3;
}

message Block {
  BlockHeader header = 1;
  BlockBody body = 2;
  BlockSignatureData signatureData = 3;
}
